// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select accesskey="V" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select kol-select--disabled" disabled="" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-select _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--hidden-error kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _accessKey="V" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select accesskey="V" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _alert=true 1`] = `
<kol-select _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _disabled=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select kol-select--disabled" disabled="" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _hint="Hint" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
          </div>
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-select _hide-error="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--hidden-error kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--touched kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select kol-select--touched" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _multiple=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" multiple="" name="field">
                <option class="kol-select__option kol-select__option--disabled" disabled="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--touched kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select kol-select--touched" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;

exports[`kol-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-select _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-select" role="presentation">
      <label class="kol-form-field__label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <form>
              <input hidden="" type="submit">
              <select autocapitalize="off" autocorrect="off" class="kol-select" id="id-nonce" name="field">
                <option class="kol-select__option kol-select__option--disabled kol-select__option--selected" disabled="" selected="" value="-0">
                  Frau
                </option>
                <option class="kol-select__option" value="-1">
                  Herr
                </option>
                <option class="kol-select__option" value="-2">
                  Divers
                </option>
              </select>
            </form>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-select>
`;
